# originalMemory

./: CMakeLists.txt  README.md
cmakeModules/: FindSDL2_ttf.cmake
originalMemory/: CMakeLists.txt
originalMemory/cmakeModules/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake
originalMemory/sources/common/: comboTextureStruct.h  defines.h  initTempStruct.c  initialize.c  initialize.h  loadComboTexture.c  loadComboTexture.h  loadSDL2.c  loadSDL2.h  main.c  timeDelayStruct.h  user.c  user.h
originalMemory/sources/game/: allocMeltCardsData.c  allocMeltCardsData.h  cardsGraphics.h  displayCards.c  displayCards.h  displayText.c  displayText.h  gameContext.c  gameContext.h  globalGameData.h  initGlobalGameData.c  initGlobalGameData.h  loadGameGraphics.c  loadGameGraphics.h  numericData.h
originalMemory/sources/mainMenu/: instructionsMenuPrincipal.h  levelButtons.c  levelButtons.h  mainMenuStructs.h
sources/common/: comboTextureStruct.h  initTempStruct.c  initTempStruct.h  initialize.c  initialize.h  loadComboTexture.h  loadSDL2.c  loadSDL2.h  main.c  positionStruct.h  timeDelayStruct.h  user.h
sources/game/: allocMeltCardsData.c  displayCards.c  displayCards.h  displayText.c  displayText.h  gameContext.c  gameContext.h  initGlobalGameData.c  initGlobalGameData.h  loadGameGraphics.c  loadGameGraphics.h  numericData.h
sources/mainMenu/: instructionsMenuPrincipal.c  levelButtons.h
